[package]
name = "makara_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
bevy = { version="0.18.0", features=[
    "debug",
    "default_font",
    "png",
    "jpeg",
    "webp",
    "https",
    "experimental_bevy_ui_widgets"
]}
